--- a/PROYECTO-MJC memoorize/package.json
+++ b/PROYECTO-MJC memoorize/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "bad-words": "^4.0.0",
     "express": "^4.21.1",
-    "proyecto-mjc-memoorize": "file:"
+    "proyecto-mjc-memoorize": "file:",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
